--- a/views/index.ejs
+++ b/views/index.ejs
@@ -97,6 +97,11 @@
         </div>
 
     </div>
+    <script>
+        window.addEventListener("focus", () => {
+            location.reload();
+        });
+    </script>
 
 </body>
 
